Refactor request handling to increase stability
Signed-off-by: Anders Alfredsson <andersb86@gmail.com>