@@ -15,28 +15,19 @@ package org.openhab.binding.nibeuplinkrest.internal.api;
 
 import static org.eclipse.jetty.http.HttpStatus.*;
 import static org.openhab.binding.nibeuplinkrest.internal.NibeUplinkRestBindingConstants.*;
+import static org.openhab.binding.nibeuplinkrest.internal.api.RequestWrapper.*;
 
-import java.io.IOException;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.TimeoutException;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jetty.client.HttpClient;
 import org.eclipse.jetty.client.api.ContentResponse;
-import org.eclipse.jetty.client.api.Request;
-import org.eclipse.jetty.client.util.StringContentProvider;
-import org.eclipse.jetty.http.HttpHeader;
-import org.eclipse.jetty.http.HttpMethod;
 import org.openhab.binding.nibeuplinkrest.internal.api.model.Mode;
 import org.openhab.binding.nibeuplinkrest.internal.api.model.Thermostat;
 import org.openhab.binding.nibeuplinkrest.internal.exception.NibeUplinkRestException;
 import org.openhab.binding.nibeuplinkrest.internal.exception.NibeUplinkRestHttpException;
 import org.openhab.core.auth.client.oauth2.*;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import com.google.gson.Gson;
 
@@ -46,37 +37,10 @@ import com.google.gson.Gson;
 @NonNullByDefault
 public class NibeUplinkRestRequestHandler {
 
-    /**
-     * Different types of requests, stored in the {@link Request} object to
-     * decide what to do after the request is completed
-     */
-    public enum RequestType {
-        SYSTEM,
-        STATUS,
-        PARAMETER_GET,
-        SOFTWARE,
-        MODE_GET,
-        CONFIG,
-        CATEGORIES,
-        PARAMETER_SET,
-        MODE_SET,
-        THERMOSTAT,
-        SYSTEMS,
-        ALARM
-    }
-
-    private static final String CONTENT_TYPE = "application/json";
-    private static final String BEARER = "Bearer ";
-    public static final String REQUEST_TYPE = "requestType";
-    public static final String SYSTEM_ID = "systemId";
-    public static final int NO_SYSTEM_ID = -1;
-
     private final Gson serializer = new Gson();
 
     private final OAuthClientService oAuthClient;
     private final HttpClient httpClient;
-
-    private final Logger logger = LoggerFactory.getLogger(NibeUplinkRestRequestHandler.class);
 
     public NibeUplinkRestRequestHandler(OAuthClientService oAuthClient, HttpClient httpClient) {
         this.oAuthClient = oAuthClient;
@@ -88,8 +52,8 @@ public class NibeUplinkRestRequestHandler {
      * 
      * @return
      */
-    public Request createConnectedSystemsRequest() {
-        return prepareRequest(HttpMethod.GET, API_SYSTEMS, NO_SYSTEM_ID, RequestType.SYSTEMS);
+    public RequestWrapper createConnectedSystemsRequest() {
+        return new RequestWrapper(RequestType.SYSTEMS);
     }
 
     /**
@@ -98,8 +62,8 @@ public class NibeUplinkRestRequestHandler {
      * @param systemId
      * @return
      */
-    public Request createSystemRequest(int systemId) {
-        return prepareRequest(HttpMethod.GET, API_SYSTEM_WITH_ID, systemId, RequestType.SYSTEM);
+    public RequestWrapper createSystemRequest(int systemId) {
+        return new RequestWrapper(RequestType.SYSTEM, systemId);
     }
 
     /**
@@ -108,8 +72,8 @@ public class NibeUplinkRestRequestHandler {
      * @param systemId
      * @return
      */
-    public Request createStatusRequest(int systemId) {
-        return prepareRequest(HttpMethod.GET, API_STATUS, systemId, RequestType.STATUS);
+    public RequestWrapper createStatusRequest(int systemId) {
+        return new RequestWrapper(RequestType.STATUS, systemId);
     }
 
     /**
@@ -118,8 +82,8 @@ public class NibeUplinkRestRequestHandler {
      * @param systemId
      * @return
      */
-    public Request createAlarmInfoRequest(int systemId) {
-        return prepareRequest(HttpMethod.GET, API_NOTIFICATIONS, systemId, RequestType.ALARM);
+    public RequestWrapper createAlarmInfoRequest(int systemId) {
+        return new RequestWrapper(RequestType.ALARM, systemId);
     }
 
     /**
@@ -128,8 +92,8 @@ public class NibeUplinkRestRequestHandler {
      * @param systemId
      * @return
      */
-    public Request createSystemConfigRequest(int systemId) {
-        return prepareRequest(HttpMethod.GET, API_CONFIG, systemId, RequestType.CONFIG);
+    public RequestWrapper createSystemConfigRequest(int systemId) {
+        return new RequestWrapper(RequestType.CONFIG, systemId);
     }
 
     /**
@@ -138,8 +102,8 @@ public class NibeUplinkRestRequestHandler {
      * @param systemId
      * @return
      */
-    public Request createSoftwareRequest(int systemId) {
-        return prepareRequest(HttpMethod.GET, API_SOFTWARE, systemId, RequestType.SOFTWARE);
+    public RequestWrapper createSoftwareRequest(int systemId) {
+        return new RequestWrapper(RequestType.SOFTWARE, systemId);
     }
 
     /**
@@ -149,10 +113,9 @@ public class NibeUplinkRestRequestHandler {
      * @param includeParameters
      * @return
      */
-    public Request createCategoriesRequest(int systemId, boolean includeParameters) {
-        Request req = prepareRequest(HttpMethod.GET, API_CATEGORIES, systemId, RequestType.CATEGORIES);
-        req.param(API_QUERY_INCLUDE_PARAMETERS, Boolean.toString(includeParameters));
-        return req;
+    public RequestWrapper createCategoriesRequest(int systemId, boolean includeParameters) {
+        return new RequestWrapper(RequestType.CATEGORIES, systemId,
+                Map.of(API_QUERY_INCLUDE_PARAMETERS, Set.of(includeParameters)));
     }
 
     /**
@@ -162,12 +125,9 @@ public class NibeUplinkRestRequestHandler {
      * @param parameterIds
      * @return
      */
-    public Request createGetParametersRequest(int systemId, Set<Integer> parameterIds) {
-        Request req = prepareRequest(HttpMethod.GET, API_PARAMETERS, systemId, RequestType.PARAMETER_GET);
-        parameterIds.forEach(p -> {
-            req.param(API_QUERY_PARAMETER_IDS, p.toString());
-        });
-        return req;
+    public RequestWrapper createGetParametersRequest(int systemId, Set<Integer> parameterIds) {
+        return new RequestWrapper(RequestType.PARAMETER_GET, systemId,
+                Map.of(API_QUERY_PARAMETER_IDS, Set.copyOf(parameterIds)));
     }
 
     /**
@@ -177,11 +137,9 @@ public class NibeUplinkRestRequestHandler {
      * @param parameters
      * @return
      */
-    public Request createSetParametersRequest(int systemId, Map<Integer, Integer> parameters) {
-        Request req = prepareRequest(HttpMethod.PUT, API_PARAMETERS, systemId, RequestType.PARAMETER_SET);
-        Map<String, Map<Integer, Integer>> wrapper = Collections.singletonMap("settings", parameters);
-        req.content(new StringContentProvider(serializer.toJson(wrapper)), CONTENT_TYPE);
-        return req;
+    public RequestWrapper createSetParametersRequest(int systemId, Map<Integer, Integer> parameters) {
+        Map<String, Map<Integer, Integer>> wrapper = Map.of("settings", parameters);
+        return new RequestWrapper(RequestType.PARAMETER_SET, systemId, serializer.toJson(wrapper));
     }
 
     /**
@@ -190,8 +148,8 @@ public class NibeUplinkRestRequestHandler {
      * @param systemId
      * @return
      */
-    public Request createGetModeRequest(int systemId) {
-        return prepareRequest(HttpMethod.GET, API_MODE, systemId, RequestType.MODE_GET);
+    public RequestWrapper createGetModeRequest(int systemId) {
+        return new RequestWrapper(RequestType.MODE_GET, systemId);
     }
 
     /**
@@ -201,11 +159,8 @@ public class NibeUplinkRestRequestHandler {
      * @param mode
      * @return
      */
-    public Request createSetModeRequest(int systemId, Mode mode) {
-        Request req = prepareRequest(HttpMethod.PUT, API_MODE, systemId, RequestType.MODE_SET);
-        String body = serializer.toJson(Collections.singletonMap("mode", mode));
-        req.content(new StringContentProvider(body), CONTENT_TYPE);
-        return req;
+    public RequestWrapper createSetModeRequest(int systemId, Mode mode) {
+        return new RequestWrapper(RequestType.MODE_SET, systemId, serializer.toJson(Map.of("mode", mode)));
     }
 
     /**
@@ -215,30 +170,8 @@ public class NibeUplinkRestRequestHandler {
      * @param thermostat
      * @return
      */
-    public Request createSetThermostatRequest(int systemId, Thermostat thermostat) {
-        Request req = prepareRequest(HttpMethod.POST, API_THERMOSTATS, systemId, RequestType.THERMOSTAT);
-        req.content(new StringContentProvider(serializer.toJson(thermostat)), CONTENT_TYPE);
-        return req;
-    }
-
-    /**
-     * Prepare the request with default values
-     * 
-     * @param method
-     * @param endPoint
-     * @param systemId
-     * @param requestType
-     * @return
-     */
-    private Request prepareRequest(HttpMethod method, String endPoint, int systemId, RequestType requestType) {
-        Request req = systemId == NO_SYSTEM_ID ? httpClient.newRequest(endPoint)
-                : httpClient.newRequest(String.format(endPoint, systemId));
-        req.method(method);
-        req.accept(CONTENT_TYPE);
-        req.followRedirects(true);
-        req.attribute(SYSTEM_ID, systemId);
-        req.attribute(REQUEST_TYPE, requestType);
-        return req;
+    public RequestWrapper createSetThermostatRequest(int systemId, Thermostat thermostat) {
+        return new RequestWrapper(RequestType.THERMOSTAT, systemId, serializer.toJson(thermostat));
     }
 
     /**
@@ -248,43 +181,13 @@ public class NibeUplinkRestRequestHandler {
      * @return The body of the response as a String
      * @throws NibeUplinkRestException
      */
-    public String makeRequestWithRetry(Request req) throws NibeUplinkRestException {
+    public String makeRequestWithRetry(RequestWrapper req) throws NibeUplinkRestException {
         ContentResponse resp;
-        resp = sendRequest(req);
+        resp = req.send(httpClient, oAuthClient);
         if (resp.getStatus() == UNAUTHORIZED_401) {
-            resp = sendRequest(req);
+            resp = req.send(httpClient, oAuthClient);
         }
         return handleResponse(resp);
-    }
-
-    /**
-     * Add OAuth token and send the request. Catch any errors an re-throw a {@link NibeUplinkRestException}
-     * 
-     * @param req
-     * @return
-     */
-    private ContentResponse sendRequest(Request req) throws NibeUplinkRestException {
-        String token;
-        try {
-            AccessTokenResponse accessTokenResponse = oAuthClient.getAccessTokenResponse();
-            if (accessTokenResponse == null) {
-                throw new NibeUplinkRestException("Error getting access token response");
-            }
-            token = accessTokenResponse.getAccessToken();
-        } catch (OAuthException | OAuthResponseException | IOException e) {
-            throw new NibeUplinkRestException("Error retrieving token:" + e.getClass() + ": " + e.getMessage(), e);
-        }
-        req.header(HttpHeader.AUTHORIZATION, BEARER + token);
-
-        logger.trace("Sending {} request to {} {}", req.getMethod(), req.getPath(),
-                req.getContent() != null ? "with data " + new String(req.getContent().iterator().next().array()) : "");
-        ContentResponse resp;
-        try {
-            resp = req.send();
-        } catch (InterruptedException | TimeoutException | ExecutionException e) {
-            throw new NibeUplinkRestException("Failed to send HTTP request", e);
-        }
-        return resp;
     }
 
     /**
